--- a/PSS/Pages/Settings.razor
+++ b/PSS/Pages/Settings.razor
@@ -43,6 +43,8 @@
 
     <div>
         <span class="header">Maintenance</span>
+        <button class="textBtn"><span class="material-icons-outlined">insert_drive_file</span><a href="maintenance/untracked">Untracked Files</a></button>
+        <button class="textBtn"><span class="material-icons-outlined">folder</span><a href="maintenance/empty-folders">Empty Folders</a></button>
     </div>
 </div>
 
