--- a/PSS/wwwroot/css/Shared.css
+++ b/PSS/wwwroot/css/Shared.css
@@ -40,6 +40,7 @@
 
 /* Add space to right of button icon */
 button span ~ * {padding-left: 11px; text-decoration: none;}
+.iconBtn svg, .textBtn svg {fill: white}
 
 .iconBtn:hover, .textBtn:hover {
     background-color: var(--hover-color);
