--- a/PSS/Pages/Maintenance/UntrackedFiles.razor
+++ b/PSS/Pages/Maintenance/UntrackedFiles.razor
@@ -7,7 +7,7 @@
 
 <header>
     <button class="textBtn">
-        <span class="material-icons-outlined">&#xe2c3;</span><span>Move to Upload</span>
+        <span class="material-icons-outlined">drive_file_move</span><span>Move to Upload</span>
     </button>
 
     <button class="textBtn" @onclick="@DeleteAll">
