moving items to Upload works

--- a/PSS/Pages/Maintenance/UntrackedFiles.razor
+++ b/PSS/Pages/Maintenance/UntrackedFiles.razor
@@ -6,8 +6,8 @@
 <link href="css/maintenance/UntrackedFiles.css" rel="stylesheet">
 
 <header>
-    <button class="textBtn">
-        <span class="material-icons-outlined">drive_file_move</span><span>Move to Upload</span>
+    <button class="textBtn" @onclick="@MoveAll">
+        <span class="material-icons-outlined">drive_file_move</span><span>Move All to Upload</span>
     </button>
 
     <button class="textBtn" @onclick="@DeleteAll">
@@ -36,6 +36,10 @@
 
             <span title="@name" class="filenameSpan">@name</span>
 
+            <button class="iconBtn" title="Move Item to Upload Folder" @onclick="@(() => MoveBtnClick(ii))">
+                <span class="material-icons-outlined">drive_file_move</span>
+            </button>
+            
             <button class="iconBtn" title="Delete Item From Server" @onclick="@(() => DeleteBtnClick(ii))">
                 <svg width="24px" height="24px" class="material-icons" viewBox="0 0 24 24">
                     <path d="M15 4V3H9v1H4v2h1v13c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V6h1V4h-5zm2 15H7V6h10v13zM9 8h2v9H9zm4 0h2v9h-2z"></path>
@@ -51,6 +55,20 @@
     protected override void OnInitialized()
     {
         untrackedPaths = Maintenance.GetUntrackedLibFiles();
+    }
+    
+    private static void MoveBtnClick(int index)
+    {
+        string path = untrackedPaths[index];
+        File.Move(path, Path.Combine(Settings.uploadRootPath, Path.GetFileName(path)));
+        untrackedPaths.RemoveAt(index);
+    }
+
+    private static void MoveAll()
+    {
+        foreach (string path in untrackedPaths)
+            File.Move(path, Path.Combine(Settings.uploadRootPath, Path.GetFileName(path)));
+        untrackedPaths.Clear();
     }
 
     private static void DeleteBtnClick(int index)
