--- a/PSS/wwwroot/css/Shared.css
+++ b/PSS/wwwroot/css/Shared.css
@@ -38,8 +38,10 @@
     padding: 11px;
 }
 
-/* Add space to right of button icon */
-button span ~ span, button svg ~ span {padding-left: 11px;}
+/* Add space to right of textBtn icon (which is either an svg like the trash icon or a span) */
+.textBtn span ~ * {padding-left: 11px; text-decoration: none;}
+
+svg {fill: white;}
 
 .iconBtn:hover, .textBtn:hover {
     background-color: var(--hover-color);
