--- a/PSS/wwwroot/css/maintenance/UntrackedFiles.css
+++ b/PSS/wwwroot/css/maintenance/UntrackedFiles.css
@@ -17,6 +17,16 @@ header > button {
     margin-right: 12px;
 }
 
+h1 {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    text-align: center;
+    user-select: none;
+}
+
 #mainDiv {
     position: absolute;
     left: 145px;
