--- a/PSS/Pages/Test.razor
+++ b/PSS/Pages/Test.razor
@@ -1,41 +1,13 @@
 @*A blank page just for testing stuff*@
 @page "/test"
-@using static PSS.Backend.Connection
-@using static PSS.Backend.Maintenance
 @using System.IO
-@* @layout EmptyLayout *@
 
 <title>Test</title>
-@* *@
-@* @{ *@
-@*     string[] yes = Directory.GetFiles(@"C:\Users\Elliott\Videos\tmp", "*", SearchOption.AllDirectories); *@
-@* *@
-@*     foreach (var y in yes) *@
-@*     { *@
-@*         Console.WriteLine(y); *@
-@*     } *@
-@*     Console.WriteLine($"Size is {yes.Length}"); *@
-@* } *@
+
 @{
-    // Console.WriteLine(Maintenance.IsFolderEmpty(@"C:\Users\Elliott\Videos\tmp"));
-    // foreach (MediaRow yes in LoadMediaTable())
-    // {
-    //     Console.WriteLine(yes.ToString());
-    // }
-    // Console.WriteLine();
-    List<string> yes2 = GetUntrackedLibFiles();
+    string[] paths = Directory.GetDirectories(PSS.Settings.uploadRootPath, "*", SearchOption.AllDirectories);
 
-    foreach (string yes in yes2)
-    {
-        Console.WriteLine(yes);
-        // string path = Path.Combine(PSS.Settings.libFolderFullPath, yes);
-        // Console.WriteLine(path);
-        // File.Delete(path);
-    }
-    Console.WriteLine();
-}
-<button style="margin-left: 50%;" @onclick="@(() => UpdateDateTaken(GetPathFromUuid("2dc3492e-6139-11ec-90c6-04421acfc461"), new DateTime(2013, 4, 5)))">click me</button>
-
-@code {
-   
+    paths = paths.Reverse().ToArray(); //Start at deepest folder and work up (to avoid dir not found errors).
+    foreach (string path in paths)
+        if (Backend.Maintenance.IsFolderEmpty(path)) Directory.Delete(path, true);
 }
