--- a/PSS/wwwroot/css/Settings.css
+++ b/PSS/wwwroot/css/Settings.css
@@ -7,9 +7,9 @@
 }
 
 #body > div {
-    width: 500px;
+    width: 40%;
     border: 3px solid white;
-    padding: 13px 15px 13px 10px;
+    padding: 13px 15px 0 10px;
     border-radius: 20px;
     margin-bottom: 25px;
 }
@@ -24,6 +24,7 @@
 #body > div > button {
     display: inline-flex;
     margin-right: 5px;
+    margin-bottom: 15px;
 }
 
 #body > div > .settings-pair {
