button shows number of missing files

--- a/PSS/Pages/Settings.razor
+++ b/PSS/Pages/Settings.razor
@@ -1,5 +1,6 @@
 @page "/settings"
 @using System.IO
+@using M = Backend.Maintenance;
 
 <title>Settings</title>
 <link href="css/Settings.css" rel="stylesheet"/>
@@ -45,7 +46,7 @@
     <div>
         <span class="header">Maintenance</span>
         <button class="textBtn" title="Items in Library Folder but NOT in Database"><span class="material-icons-outlined">insert_drive_file</span><a href="maintenance/untracked-files">Untracked Files (@untrackedPaths.Count)</a></button>
-        <button class="textBtn" title="Paths in Database but File Is Not Present in Library"><span class="material-icons-outlined">find_in_page</span><a href="maintenance/missing-files">Missing Files</a></button>
+        <button class="textBtn" title="Paths in Database but File Is Not Present in Library"><span class="material-icons-outlined">find_in_page</span><a href="maintenance/missing-files">Missing Files (@media.Count)</a></button>
         <button class="textBtn" @onclick="@EmptyFoldersBtnClick" title="Click to Delete All Empty Folders From Library and Upload"><span class="material-icons-outlined">folder</span><span>Empty Folders (@emptyFolders.Count)</span></button>
     </div>
 </div>
@@ -63,6 +64,11 @@
     //Get all folders in Library and Upload
     private static string[] folderPaths;
     private static readonly List<string> emptyFolders = new();
+    
+    private static List<string> media;
+    private static List<string> media_trash;
+    private static List<string> album_entries;
+    private static List<string> album_entries_trash;
 
     protected override void OnInitialized()
     {
@@ -71,6 +77,12 @@
         folderPaths = Directory.GetDirectories(PSS.Settings.libFolderFullPath, "*", SearchOption.AllDirectories).Concat(Directory.GetDirectories(PSS.Settings.uploadRootPath, "*", SearchOption.AllDirectories)).ToArray();
         foreach (string path in folderPaths)
             if (Backend.Maintenance.IsFolderEmpty(path) && !emptyFolders.Contains(path)) emptyFolders.Add(path);
+        
+        media = M.GetMissingFiles(M.MissingFilesTable.media);
+        media_trash = M.GetMissingFiles(M.MissingFilesTable.media_trash);
+        album_entries = M.GetMissingFiles(M.MissingFilesTable.album_entries);
+        album_entries_trash = M.GetMissingFiles(M.MissingFilesTable.album_entries_trash);
+        media = media.Concat(media_trash).Concat(album_entries).Concat(album_entries_trash).ToList();
     }
 
     private static void ApplyBtnClicked()
