--- a/PSS/Pages/Test.razor
+++ b/PSS/Pages/Test.razor
@@ -1,10 +1,14 @@
 @*A blank page just for testing stuff*@
 @page "/test"
 @using System.IO
+@using PSS.Backend
 
 <title>Test</title>
 
 @{
+    //Generate dummy data
+    // for (int i = 0; i < 40; i++) Connection.InsertMedia("item " + i, DateTime.Now);
+    
     // string[] paths = Directory.GetDirectories(PSS.Settings.libFolderFullPath, "*", SearchOption.AllDirectories);
     // paths = paths.Concat(Directory.GetDirectories(PSS.Settings.uploadRootPath, "*", SearchOption.AllDirectories)).ToArray();
 
